# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "clang_sys"

  crate_type = "rlib"

  visibility = [ "//third_party/rust/crates/*" ]
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2015"

  deps = [
    "//third_party/rust/crates/glob:lib",
    "//third_party/rust/crates/libc:lib",
    "//third_party/rust/crates/libloading:lib",
  ]
  build_deps = [ "//third_party/rust/crates/glob:lib" ]
  features = [
    "clang_3_5",
    "clang_3_6",
    "clang_3_7",
    "clang_3_8",
    "clang_3_9",
    "clang_4_0",
    "clang_5_0",
    "clang_6_0",
    "libloading",
    "static",
  ]
  build_root = "build.rs"
  build_sources = [ "build.rs" ]
  # deps += [ "//build/rust/clanglibs" ]
}
